cmake_minimum_required(VERSION 3.16)
project(mysqlconnectionpool)
set(CMAKE_CXX_STANDARD 11)
set(INCLUDE ${PROJECT_SOURCE_DIR}/include)
set(STATIC_LIB_NAME mysqlconnectionpool)				
set(STATIC_LIB_PATH ${PROJECT_SOURCE_DIR}/lib)
set(EXECUTABLE_PATH ${PROJECT_SOURCE_DIR}/bin)
# set(LIB_NAME mysqlconnectionpool)				
# set(LIB_PATH ${PROJECT_SOURCE_DIR}/lib)
add_subdirectory(${PROJECT_SOURCE_DIR}/libmysqlcon)
add_subdirectory(${PROJECT_SOURCE_DIR}/test)