cmake_minimum_required(VERSION 3.16)
project(performanceTest)
set(CMAKE_CXX_STANDARD 11)
include_directories(${INCLUDE})
aux_source_directory(${PROJECT_SOURCE_DIR} SRC)
link_directories(${STATIC_LIB_PATH})
link_libraries(${STATIC_LIB_NAME} jsoncpp)
set(EXECUTABLE_OUTPUT_PATH ${EXECUTABLE_PATH})
add_executable(performanceTest ${SRC})
target_link_libraries(performanceTest mysqlclient pthread)